# gis_test

./: CMakeLists.txt  arguments.cpp  arguments.h  checksum.cpp  checksum.h  main.cpp  words.cpp  words.h
test/: tests.cpp
